@@ -79,9 +79,9 @@
 
 struct mtd_geometry_s
 {
-  uint16_t blocksize;     /* Size of one read/write block */
-  uint16_t erasesize;     /* Size of one erase blocks -- must be a multiple
-                           * of blocksize. */
+  uint32_t blocksize :14; /* Size of one read/write block.  Largest: 16KB-1 */
+  uint32_t erasesize :18; /* Size of one erase blocks -- must be a multiple
+                           * of blocksize.  Largest: 512KB-1 */
   size_t neraseblocks;    /* Number of erase blocks */
 };
 
